--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -158,3 +158,7 @@ body main .panel-central .libros-recomendados .titulo-boton button{
     border-radius: 10px;
     
 }
+body main .panel-central .libros-recomedados .caja-portadas{
+    width: 100%;
+    
+}
